--- a/config/Clash/qichiyubackup.ini
+++ b/config/Clash/qichiyubackup.ini
@@ -1,5 +1,8 @@
 [custom]
 ;不要随意改变关键字，否则会导致出错
+# 油管频道  七尺宇  
+# 电报群   https://t.me/qichiyuchat  
+# 本规则仅为视频演示使用 实际使用请根据自己情况进行修改 如果问题请群里反馈！
 
 ;规则集定义
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
