添加"auto_redirect": true,

--- a/config/singbox/config_tun.json
+++ b/config/singbox/config_tun.json
@@ -44,6 +44,7 @@
       "address": "172.19.0.1/30",
       "mtu": 9000,
       "auto_route": true,
+      "auto_redirect": true,
       "sniff": true,
       "endpoint_independent_nat": false,
       "stack": "system",
