--- a/config/singbox/config_iphone.json
+++ b/config/singbox/config_iphone.json
@@ -15,9 +15,7 @@
       "default_mode": "rule"
     },
   "cache_file": {
-    "enabled": true,
-    "path": "/etc/sing-box/cache.db",
-    "store_fakeip": false
+    "enabled": true
     }
   },
   
