--- a/config/singbox/yy_config_ipy.json
+++ b/config/singbox/yy_config_ipy.json
@@ -13,7 +13,7 @@
   
   "dns": {
     "servers": [
-      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "localDns", "address_strategy": "ipv4_only", "client_subnet": "1.0.1.0" },
+      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "localDns", "address_strategy": "ipv4_only", "client_subnet": "1.0.1.0", "detour": "🚀 节点选择" },
       {"tag": "localDns", "address": "https://120.53.53.53/dns-query", "detour": "🎯 全球直连"},
       {"tag": "block", "address": "rcode://success"}
     ],
