--- a/config/singbox/yy_config_ipy.json
+++ b/config/singbox/yy_config_ipy.json
@@ -13,12 +13,13 @@
   
   "dns": {
     "servers": [
-      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "localDns", "address_strategy": "ipv4_only", "client_subnet": "1.0.1.0", "detour": "🚀 节点选择" },
-      {"tag": "localDns", "address": "https://120.53.53.53/dns-query", "detour": "🎯 全球直连"},
+      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "client_subnet": "1.0.1.0", "detour": "🚀 节点选择" },
+      {"tag": "localDns", "address": "https://120.53.53.53/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
+      {"tag": "defaultDns", "address": "119.29.29.29", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
       {"tag": "block", "address": "rcode://success"}
     ],
     "rules": [
-      { "outbound": "any", "server": "localDns", "disable_cache": true },
+      { "outbound": "any", "server": "defaultDns", "disable_cache": true },
       { "clash_mode": "direct", "server": "localDns" },
       { "clash_mode": "global", "server": "proxyDns" },
       { "rule_set": "geosite-ads", "server": "block"},	  
