--- a/config/singbox/yy_config_ipy_tun.json
+++ b/config/singbox/yy_config_ipy_tun.json
@@ -13,24 +13,13 @@
   
   "dns": {
     "servers": [
-        {
-          "tag": "proxyDns",
-          "address": "tls://8.8.8.8",
-          "detour": "Proxy"
-        },
-        {
-          "tag": "localDns",
-          "address": "https://223.5.5.5/dns-query",
-          "detour": "direct"
-        },
-        {
-          "tag": "block",
-          "address": "rcode://success"
-        }
-      ],
-
+      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "client_subnet": "1.0.1.0", "detour": "🚀 节点选择" },
+      {"tag": "localDns", "address": "https://120.53.53.53/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
+      {"tag": "defaultDns", "address": "119.29.29.29", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
+      {"tag": "block", "address": "rcode://success"}
+    ],
     "rules": [
-      { "outbound": "any", "server": "localDns", "disable_cache": true },
+      { "outbound": "any", "server": "defaultDns", "disable_cache": true },
       { "clash_mode": "direct", "server": "localDns" },
       { "clash_mode": "global", "server": "proxyDns" },
       { "rule_set": "geosite-ads", "server": "block"},	  
@@ -48,30 +37,31 @@
   },
 
     "inbounds": [
-    {
-      "type": "tun",
-      "address": "172.19.0.1/30",
-      "mtu": 9000,
-      "auto_route": true,
-      "sniff": true,
-      "stack": "system",
-	  "strict_route": true,
-      "platform": {
-        "http_proxy": {
-          "enabled": true,
-          "server": "127.0.0.1",
-          "server_port": 2080
+      {
+        "type": "tun",
+        "address": "172.19.0.1/30",
+        "mtu": 9000,
+        "auto_route": true,
+        "strict_route": true,
+        "sniff": true,
+        "endpoint_independent_nat": false,
+        "stack": "system",
+        "platform": {
+          "http_proxy": {
+            "enabled": true,
+            "server": "127.0.0.1",
+            "server_port": 2080
+          }
         }
+      },
+      {
+        "type": "mixed",
+        "listen": "127.0.0.1",
+        "listen_port": 2080,
+        "sniff": true,
+        "users": []
       }
-    },
-    {
-      "type": "mixed",
-      "listen": "127.0.0.1",
-      "listen_port": 2080,
-      "sniff": true,
-      "users": []
-    }
-  ],
+    ],
 
   "outbounds": [
     { "tag": "🚀 节点选择", "type": "selector", "outbounds": ["♻️ 自动选择", "🐸 手动切换", "🎯 全球直连"]},
