--- a/config/singbox/yy_config_ipy_tun.json
+++ b/config/singbox/yy_config_ipy_tun.json
@@ -30,7 +30,7 @@
       ],
       "rules": [
         {
-          "rule_set": "geosite-category-ads-all",
+          "rule_set": "geosite-ads",
           "server": "block"
         },
         {
