--- a/config/singbox/yy_config_ipy_tun.json
+++ b/config/singbox/yy_config_ipy_tun.json
@@ -12,52 +12,23 @@
   },
   
   "dns": {
-      "servers": [
-        {
-          "tag": "proxyDns",
-          "address": "tls://8.8.8.8",
-          "detour": "🚀 节点选择"
-        },
-        {
-          "tag": "localDns",
-          "address": "https://223.5.5.5/dns-query",
-          "detour": "🎯 全球直连"
-        },
-        {
-          "tag": "block",
-          "address": "rcode://success"
-        }
-      ],
-      "rules": [
-        {
-          "rule_set": "geosite-ads",
-          "server": "block"
-        },
-        {
-          "outbound": "any",
-          "server": "localDns",
-          "disable_cache": true
-        },
-        {
-          "rule_set": "geosite-cn",
-          "server": "localDns"
-        },   
-        {
-          "clash_mode": "direct",
-          "server": "localDns"
-        },
-        {
-          "clash_mode": "global",
-          "server": "proxyDns"
-        },
-        {
-          "rule_set": "geosite-geolocation-!cn",
-          "server": "proxyDns"
-        }
-      ],
-      "final": "localDns",
-      "strategy": "ipv4_only"
-    },
+    "servers": [
+      {"tag": "proxyDns", "address": "https://dns.google/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "client_subnet": "1.0.1.0", "detour": "🚀 节点选择" },
+      {"tag": "localDns", "address": "https://120.53.53.53/dns-query", "address_resolver": "defaultDns", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
+      {"tag": "defaultDns", "address": "119.29.29.29", "address_strategy": "ipv4_only", "detour": "🎯 全球直连"},
+      {"tag": "block", "address": "rcode://success"}
+    ],
+    "rules": [
+      { "outbound": "any", "server": "defaultDns", "disable_cache": true },
+      { "clash_mode": "direct", "server": "localDns" },
+      { "clash_mode": "global", "server": "proxyDns" },
+      { "rule_set": "geosite-ads", "server": "block"},	  
+      { "rule_set": "geosite-cn", "server": "localDns" },
+      { "rule_set": "geosite-geolocation-!cn", "server": "proxyDns" }
+    ],
+    "final": "proxyDns",
+    "strategy": "ipv4_only"
+  },
 
     "inbounds": [
     {
