--- a/config/singbox/yy_config_ipy_tun.json
+++ b/config/singbox/yy_config_ipy_tun.json
@@ -20,10 +20,10 @@
     ],
     "rules": [
       { "rule_set": "geosite-ads", "server": "block"},	
-      { "outbound": "any", "server": "defaultDns", "disable_cache": true },
+      { "outbound": "any", "server": "localDns", "disable_cache": true },
+      { "rule_set": "geosite-cn", "server": "localDns" },	  
       { "clash_mode": "direct", "server": "localDns" },
       { "clash_mode": "global", "server": "proxyDns" },
-      { "rule_set": "geosite-cn", "server": "localDns" },
       { "rule_set": "geosite-geolocation-!cn", "server": "proxyDns" }
     ],
     "final": "proxyDns",
