--- a/config/singbox/yy_config_ipy_tun.json
+++ b/config/singbox/yy_config_ipy_tun.json
@@ -40,10 +40,13 @@
           "clash_mode": "global",
           "server": "proxyDns"
         },
-        {
-          "rule_set": "geosite-geolocation-!cn",
-          "server": "proxyDns"
-        }
+      {
+        "type": "logical", "mode": "and",
+        "rules": [{ "rule_set": "geosite-geolocation-!cn", "invert": true },
+				  { "rule_set": "geoip-cn" } ],
+        "server": "proxyDns",
+        "client_subnet": "114.114.114.114/24"
+      }
       ],
     "final": "proxyDns",
     "strategy": "ipv4_only"
