--- a/config/singbox/yy_config_ipy_tun.json
+++ b/config/singbox/yy_config_ipy_tun.json
@@ -25,7 +25,7 @@
         },
         {
           "outbound": "any",
-          "server": "localDns",
+          "server": "defaultDns",
           "disable_cache": true
         },
         {
