--- a/config/singbox/yy_config_anyy_tun.json
+++ b/config/singbox/yy_config_anyy_tun.json
@@ -78,7 +78,7 @@
     { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["odirect", "🚀 节点选择"]},
     { "tag": "🐸 手动切换", "type": "selector", "outbounds": ["{all}"]},
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["G1|G7|g0|g1|g2|g7|A0|A3|AW"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
-    { "tag": "GLOBAL", "type": "selector", "outbounds": ["{all}", "♻️ 自动选择"]},
+    { "tag": "GLOBAL", "type": "selector", "outbounds": ["{all}", "♻️ 自动选择", "🚀 节点选择"]},
     { "tag": "odirect", "type": "direct" },
     { "tag": "dns-out", "type": "dns" },
     { "tag": "block", "type": "block" }
