--- a/config/singbox/yy_config_ipyy_tun.json
+++ b/config/singbox/yy_config_ipyy_tun.json
@@ -107,9 +107,9 @@
         { "rule_set": ["geoip-apple", "geosite-apple"], "outbound": "🍏 Apple" },
         { "rule_set": ["geoip-netflix", "geosite-netflix"], "outbound": "🎥 Netflix" },
         { "rule_set": ["geoip-telegram", "geosite-telegram"], "outbound": "📲 Telegram" },
+        { "rule_set": ["geoip-cn", "geosite-cn"], "outbound": "🎯 全球直连" },
         { "rule_set": ["geosite-gfw"], "outbound": "GfwBan" },
-        { "rule_set": "geosite-geolocation-!cn", "outbound": "OutChina" },
-        { "rule_set": ["geoip-cn", "geosite-cn"], "outbound": "🎯 全球直连" }
+        { "rule_set": "geosite-geolocation-!cn", "outbound": "OutChina" }
       ],
       
       "rule_set": [
